--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@nuxt/image": "^1.8.1",
     "@nuxtjs/tailwindcss": "^6.12.2",
+    "@prisma/client": "^6.2.1",
+    "@prisma/nuxt": "^0.2.0",
+    "@types/formidable": "^3.4.5",
     "nuxt": "^3.15.0",
     "vue": "latest",
     "vue-router": "latest"
