--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/image": "^1.8.1",
-    "@nuxtjs/tailwindcss": "^6.12.2",
+    "@nuxt/image": "^1.9.0",
     "@prisma/client": "^6.2.1",
-    "@prisma/nuxt": "^0.2.0",
-    "nuxt": "^3.15.0",
+    "@prisma/nuxt": "^0.3.0",
+    "@tailwindcss/vite": "^4.0.0",
+    "nuxt": "^3.15.3",
+    "tailwindcss": "^4.0.0",
     "vue": "latest",
     "vue-router": "latest"
   }
