--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "dependencies": {
-    "@nuxt/image": "^1.9.0",
-    "@prisma/client": "^6.4.1",
-    "@prisma/nuxt": "^0.3.0",
-    "@tailwindcss/vite": "^4.0.12",
-    "nuxt": "^3.16.0",
-    "tailwindcss": "^4.0.12",
-    "vue": "latest",
-    "vue-router": "latest"
-  }
+	"name": "nuxt-app",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "prisma generate && nuxt build",
+		"dev": "nuxt dev",
+		"generate": "prisma generate && nuxt generate",
+		"preview": "nuxt preview",
+		"postinstall": "prisma generate && nuxt prepare"
+	},
+	"dependencies": {
+		"@nuxt/image": "^1.9.0",
+		"@prisma/client": "^6.4.1",
+		"@prisma/nuxt": "^0.3.0",
+		"@tailwindcss/vite": "^4.0.12",
+		"nuxt": "^3.16.0",
+		"tailwindcss": "^4.0.12",
+		"vue": "latest",
+		"vue-router": "latest"
+	}
 }
