[fix] Vercel build

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@prisma/client": "^6.4.1",
 		"@prisma/nuxt": "^0.3.0",
 		"@tailwindcss/vite": "^4.0.12",
+		"@vercel/analytics": "^1.5.0",
 		"nuxt": "^3.16.0",
 		"tailwindcss": "^4.0.12",
 		"vue": "latest",
