[fix] Vercel build

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"build": "prisma generate && nuxt build",
+		"build": "nuxt build",
 		"dev": "nuxt dev",
-		"generate": "prisma generate && nuxt generate",
+		"generate": "nuxt generate",
 		"preview": "nuxt preview",
 		"postinstall": "prisma generate && nuxt prepare"
 	},
