--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
 		"tailwindcss": "^4.0.12",
 		"vue": "latest",
 		"vue-router": "latest"
+	},
+	"devDependencies": {
+		"prisma": "^6.4.1"
 	}
 }
