--- a/package.json
+++ b/package.json
@@ -3,20 +3,24 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"build": "prisma generate && nuxt build",
+		"build": "npx prisma generate && nuxt build",
 		"dev": "nuxt dev",
-		"generate": "prisma generate && nuxt generate",
+		"generate": "npx prisma generate && nuxt generate",
 		"preview": "nuxt preview",
-		"postinstall": "prisma generate && nuxt prepare"
+		"postinstall": "npx prisma generate && nuxt prepare"
 	},
 	"dependencies": {
 		"@nuxt/image": "^1.9.0",
 		"@prisma/client": "^6.4.1",
+		"@prisma/extension-accelerate": "^1.2.2",
 		"@prisma/nuxt": "^0.3.0",
 		"@tailwindcss/vite": "^4.0.12",
 		"nuxt": "^3.16.0",
 		"tailwindcss": "^4.0.12",
 		"vue": "latest",
 		"vue-router": "latest"
+	},
+	"devDependencies": {
+		"prisma": "^6.4.1"
 	}
 }
