--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@prisma/nuxt": "^0.3.0",
 		"@tailwindcss/vite": "^4.0.12",
 		"@vercel/analytics": "^1.5.0",
+		"cloudinary": "^2.6.0",
 		"nuxt": "^3.16.0",
 		"tailwindcss": "^4.0.12",
 		"vue": "latest",
