[add] FAQs / editable --> done

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@tailwindcss/vite": "^4.0.15",
 		"@vercel/analytics": "^1.5.0",
 		"cloudinary": "^2.6.0",
+		"framer-motion": "^12.5.0",
 		"nuxt": "^3.16.1",
 		"tailwindcss": "^4.0.15",
 		"vue": "latest",
