--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
 	},
 	"dependencies": {
 		"@nuxt/image": "^1.10.0",
+		"@nuxtjs/robots": "^5.2.8",
+		"@nuxtjs/sitemap": "^7.2.9",
 		"@prisma/client": "^6.5.0",
 		"@prisma/extension-accelerate": "^1.3.0",
 		"@prisma/nuxt": "^0.3.0",
-		"@tailwindcss/vite": "^4.0.15",
+		"@tailwindcss/vite": "^4.0.17",
 		"@vercel/analytics": "^1.5.0",
 		"cloudinary": "^2.6.0",
-		"framer-motion": "^12.5.0",
 		"nuxt": "^3.16.1",
-		"tailwindcss": "^4.0.15",
+		"nuxt-schema-org": "^5.0.4",
+		"tailwindcss": "^4.0.17",
 		"vue": "latest",
 		"vue-router": "latest"
 	},
