--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"dev": "nuxt dev",
 		"generate": "npx prisma generate && nuxt generate",
 		"preview": "nuxt preview",
-		"postinstall": "npx prisma generate && nuxt prepare"
+		"postinstall": "npx prisma generate && nuxt prepare",
+		"clean": "rimraf .nuxt dist node_modules package-lock.json"
+
 	},
 	"dependencies": {
 		"@nuxt/image": "^1.10.0",
@@ -26,5 +28,8 @@
 		"@tailwindcss/vite": "^4.1.4",
 		"prisma": "^6.6.0",
 		"tailwindcss": "^4.1.4"
+	},
+	"engines": {
+		"node": "22.x"	
 	}
 }
