--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
 		"nuxt": "^3.16.2",
 		"nuxt-schema-org": "^5.0.5",
 		"vue": "latest",
-		"@tailwindcss/vite": "^4.1.4",
-		"tailwindcss": "^4.1.4",
 		"vue-router": "latest"
 	},
 	"devDependencies": {
-		"prisma": "^6.6.0"
+		"@tailwindcss/vite": "^4.1.4",
+		"prisma": "^6.6.0",
+		"tailwindcss": "^4.1.4"
 	}
 }
