--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
 		"preview": "nuxt preview",
 		"postinstall": "npx prisma generate && nuxt prepare",
 		"clean": "rimraf .nuxt dist node_modules package-lock.json"
+
 	},
 	"dependencies": {
 		"@nuxt/image": "^1.10.0",
-		"@nuxtjs/robots": "^5.2.10",
+		"@nuxtjs/robots": "^5.2.9",
 		"@nuxtjs/sitemap": "^7.2.10",
-		"@prisma/client": "^6.6.0",
+		"@prisma/client": "^6.5.0",
+		"@tailwindcss/vite": "^4.1.3",
 		"@vercel/analytics": "^1.5.0",
 		"cloudinary": "^2.6.0",
-		"gsap": "^3.12.7",
 		"nuxt": "^3.16.2",
-		"nuxt-schema-org": "^5.0.5",
+		"nuxt-schema-org": "^5.0.4",
+		"tailwindcss": "^4.1.3",
 		"vue": "latest",
 		"vue-router": "latest"
 	},
 	"devDependencies": {
-		"@tailwindcss/vite": "^4.1.4",
-		"prisma": "^6.6.0",
-		"tailwindcss": "^4.1.4"
+		"prisma": "^6.6.0"
 	}
 }
