--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
 		"preview": "nuxt preview",
 		"postinstall": "npx prisma generate && nuxt prepare",
 		"clean": "rimraf .nuxt dist node_modules package-lock.json"
-
 	},
 	"dependencies": {
 		"@nuxt/image": "^1.10.0",
@@ -19,6 +18,7 @@
 		"@tailwindcss/vite": "^4.1.3",
 		"@vercel/analytics": "^1.5.0",
 		"cloudinary": "^2.6.0",
+		"gsap": "^3.12.7",
 		"nuxt": "^3.16.2",
 		"nuxt-schema-org": "^5.0.4",
 		"tailwindcss": "^4.1.3",
