--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
 	},
 	"dependencies": {
 		"@nuxt/image": "^1.10.0",
-		"@nuxtjs/robots": "^5.2.9",
+		"@nuxtjs/robots": "^5.2.10",
 		"@nuxtjs/sitemap": "^7.2.10",
-		"@prisma/client": "^6.5.0",
-		"@tailwindcss/vite": "^4.1.3",
+		"@prisma/client": "^6.6.0",
 		"@vercel/analytics": "^1.5.0",
 		"cloudinary": "^2.6.0",
 		"gsap": "^3.12.7",
 		"nuxt": "^3.16.2",
-		"nuxt-schema-org": "^5.0.4",
-		"tailwindcss": "^4.1.3",
+		"nuxt-schema-org": "^5.0.5",
 		"vue": "latest",
 		"vue-router": "latest"
 	},
 	"devDependencies": {
-		"prisma": "^6.6.0"
+		"@tailwindcss/vite": "^4.1.4",
+		"prisma": "^6.6.0",
+		"tailwindcss": "^4.1.4"
 	}
 }
