--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
 		"@nuxtjs/robots": "^5.2.10",
 		"@nuxtjs/sitemap": "^7.2.10",
 		"@prisma/client": "^6.6.0",
-		"@tailwindcss/vite": "^4.1.4",
 		"@vercel/analytics": "^1.5.0",
 		"cloudinary": "^2.6.0",
 		"gsap": "^3.12.7",
 		"nuxt": "^3.16.2",
 		"nuxt-schema-org": "^5.0.5",
-		"tailwindcss": "^4.1.4",
 		"vue": "latest",
 		"vue-router": "latest"
 	},
 	"devDependencies": {
-		"prisma": "^6.6.0"
+		"@tailwindcss/vite": "^4.1.4",
+		"prisma": "^6.6.0",
+		"tailwindcss": "^4.1.4"
 	}
 }
