--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@nuxtjs/robots": "^5.2.10",
 		"@nuxtjs/sitemap": "^7.2.10",
 		"@prisma/client": "^6.6.0",
+		"@prisma/nuxt": "^0.3.0",
 		"@vercel/analytics": "^1.5.0",
 		"cloudinary": "^2.6.0",
 		"gsap": "^3.12.7",
