--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"prisma:deploy": "prisma migrate deploy"
 	},
 	"dependencies": {
+		"@neondatabase/serverless": "^1.0.0",
 		"@nuxt/image": "^1.10.0",
 		"@nuxtjs/robots": "^5.2.10",
 		"@nuxtjs/sitemap": "^7.2.10",
