--- a/package.json
+++ b/package.json
@@ -18,19 +18,20 @@
 		"@nuxt/image": "^1.10.0",
 		"@nuxtjs/robots": "^5.2.10",
 		"@nuxtjs/sitemap": "^7.2.10",
-		"@prisma/client": "^6.7.0",
+		"@prisma/client": "^6.8.2",
 		"@prisma/nuxt": "^0.3.0",
 		"@vercel/analytics": "^1.5.0",
 		"cloudinary": "^2.6.1",
 		"gsap": "^3.13.0",
 		"nuxt": "^3.17.3",
 		"nuxt-schema-org": "^5.0.5",
+		"resend": "^4.5.1",
 		"vue": "latest",
 		"vue-router": "latest"
 	},
 	"devDependencies": {
-		"@tailwindcss/vite": "^4.1.6",
-		"prisma": "^6.7.0",
-		"tailwindcss": "^4.1.6"
+		"@tailwindcss/vite": "^4.1.7",
+		"prisma": "^6.8.2",
+		"tailwindcss": "^4.1.7"
 	}
 }
