--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
 		"@vercel/analytics": "^1.5.0",
 		"cloudinary": "^2.6.1",
 		"gsap": "^3.13.0",
+		"nodemailer": "^7.0.3",
 		"nuxt": "^3.17.3",
 		"nuxt-schema-org": "^5.0.5",
-		"resend": "^4.5.1",
 		"vue": "latest",
 		"vue-router": "latest"
 	},
