--- a/package.json
+++ b/package.json
@@ -17,20 +17,21 @@
 		"@nuxt/image": "^1.11.0",
 		"@nuxtjs/robots": "^5.5.6",
 		"@nuxtjs/sitemap": "^7.4.7",
-		"@prisma/client": "^6.17.1",
+		"@prisma/client": "^6.18.0",
 		"@prisma/nuxt": "^0.3.0",
 		"@vercel/analytics": "^1.5.0",
-		"cloudinary": "^2.7.0",
+		"cloudinary": "^2.8.0",
 		"gsap": "^3.13.0",
-		"nodemailer": "^7.0.9",
-		"nuxt": "^4.1.3",
+		"nodemailer": "^7.0.10",
+		"nuxt": "^4.2.0",
 		"nuxt-schema-org": "^5.0.9",
 		"vue": "latest",
 		"vue-router": "latest"
 	},
 	"devDependencies": {
-		"@tailwindcss/vite": "^4.1.14",
-		"prisma": "^6.17.1",
-		"tailwindcss": "^4.1.14"
+		"@tailwindcss/vite": "^4.1.16",
+		"@types/node": "^24.9.2",
+		"prisma": "^6.18.0",
+		"tailwindcss": "^4.1.16"
 	}
 }
