--- a/package.json
+++ b/package.json
@@ -14,24 +14,25 @@
 		"prisma:deploy": "prisma migrate deploy"
 	},
 	"dependencies": {
-		"@nuxt/image": "^1.11.0",
-		"@nuxtjs/robots": "^5.5.6",
-		"@nuxtjs/sitemap": "^7.4.7",
-		"@prisma/client": "^6.18.0",
-		"@prisma/nuxt": "^0.3.0",
-		"@vercel/analytics": "^1.5.0",
+		"@nuxt/image": "^2.0.0",
+		"@nuxtjs/robots": "^5.6.7",
+		"@nuxtjs/sitemap": "^7.5.0",
+		"@prisma/adapter-pg": "^7.2.0",
+		"@prisma/client": "^7.2.0",
+		"@vercel/analytics": "^1.6.1",
 		"cloudinary": "^2.8.0",
-		"gsap": "^3.13.0",
-		"nodemailer": "^7.0.10",
-		"nuxt": "^4.2.0",
-		"nuxt-schema-org": "^5.0.9",
+		"gsap": "^3.14.2",
+		"nodemailer": "^7.0.12",
+		"nuxt": "^4.2.2",
+		"nuxt-schema-org": "^5.0.10",
+		"pg": "^8.16.3",
 		"vue": "latest",
 		"vue-router": "latest"
 	},
 	"devDependencies": {
-		"@tailwindcss/vite": "^4.1.16",
-		"@types/node": "^24.9.2",
-		"prisma": "^6.18.0",
-		"tailwindcss": "^4.1.16"
+		"@tailwindcss/vite": "^4.1.18",
+		"@types/node": "^25.0.3",
+		"prisma": "^7.2.0",
+		"tailwindcss": "^4.1.18"
 	}
 }
