--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"build": "pnpm prisma generate && nuxt build",
+		"build": "nuxt prepare && pnpm prisma:generate && nuxt build",
 		"dev": "nuxt dev",
-		"generate": "pnpm prisma generate && nuxt generate",
+		"generate": "nuxt prepare && pnpm prisma:generate && nuxt generate",
 		"preview": "nuxt preview",
-		"postinstall": "pnpm prisma generate && nuxt prepare",
-		"clean": "rimraf .nuxt dist node_modules pnpm-lock.yaml",
+		"postinstall": "nuxt prepare",
+		"clean": "rimraf .nuxt dist node_modules pnpm-lock.yaml .pnpm-store",
 		"prisma:generate": "prisma generate",
 		"prisma:studio": "prisma studio",
 		"prisma:deploy": "prisma migrate deploy"
